# ryl

./: .gitignore  .npmpackagejsonlintrc.json  .pre-commit-config.yaml  .ryl.toml  .ryl.toml.example  AGENTS.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  lychee.toml  npm-platforms.json  package.json  prek.toml  pyproject.toml  ruff.toml  rumdl.toml  rust-toolchain.toml  rustfmt.toml  ryl.toml.schema.json  ryl.yaml.schema.json  typos.toml  zensical.toml
.agents/skills/adding-a-rule/: SKILL.md
.agents/skills/codex-review/: SKILL.md  watch.py
.agents/skills/codex-review-watch/: SKILL.md  watch.py
.agents/skills/coverage/: SKILL.md  coverage-missing.py
.agents/skills/filing-issues/: SKILL.md
.agents/skills/property-tests/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/retrospective/: SKILL.md  retro-extract.py
.agents/skills/winget-defender-fp/: SKILL.md
.config/: nextest.toml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/install-lychee/: action.yml
.github/workflows/: ci.yml  dispatch_smoke.yml  link-check.yml  pre-commit.yml  release.yml  sync-schemastore.yml  update.yml  update_dependencies.yml  update_linters.yml
docs/: config-presets.md  directives.md  editor-integration.md  index.md  llms-full.txt  llms.txt  markdown.md  output-formats.md  per-line-ignores.md  rules.md  using-ryl-with-ai-agents.md  using-with-formatters.md  yaml-version.md
docs/getting-started/: installation.md  migrating-from-yamllint.md  quickstart.md  shell-completions.md
docs/rules/: anchors.md  block-scalar-chomping.md  braces.md  brackets.md  colons.md  commas.md  comments-indentation.md  comments.md  document-end.md  document-start.md  empty-lines.md  empty-values.md  float-values.md  hyphens.md  indentation.md  key-duplicates.md  key-ordering.md  line-length.md  merge-keys.md  new-line-at-end-of-file.md  new-lines.md  octal-values.md  quoted-strings.md  tags.md  trailing-spaces.md  truthy.md  unicode-line-breaks.md
scripts/: benchmark_perf_vs_yamllint.py  build_npm_packages.py  coverage-missing.ps1  formatter_compat.py  gen_llms_txt.py  print_ryl_schemastore_schema.py  source_size.py  update_yamllint_schemastore_snapshot.py
skills/ryl/: SKILL.md
src/: cli_support.rs  config.rs  config_schema.rs  decoder.rs  directives.rs  discover.rs  fix.rs  lib.rs  lint.rs  main.rs  migrate.rs  report.rs
src/conf/: mod.rs
src/config_schema/: serialization.rs  validation.rs
src/lsp/: actions.rs  analysis.rs  encoding.rs  hover.rs  mod.rs  rename.rs
src/markdown_embed/: lint.rs  mod.rs
src/rules/: anchors.rs  block_scalar_chomping.rs  braces.rs  brackets.rs  colons.rs  commas.rs  comments.rs  comments_indentation.rs  document_end.rs  document_start.rs  empty_lines.rs  empty_values.rs  float_values.rs  flow_collection.rs  hyphens.rs  indentation.rs  key_duplicates.rs  key_ordering.rs  line_length.rs  mapping_key_walker.rs  merge_keys.rs  mod.rs  new_line_at_end_of_file.rs  new_lines.rs  octal_values.rs  quoted_strings.rs  tags.rs  trailing_spaces.rs  truthy.rs  unicode_line_breaks.rs
src/rules/support/: comments_scan.rs  flow_collection.rs  line_syntax.rs  mapping_key_walker.rs  merge_key.rs  mod.rs  punctuation.rs  span_utils.rs  yaml_version.rs
src/yaml_dom/: loader.rs  mod.rs  scalar.rs  tag.rs  yaml_owned.rs
tests/: agent_skill_drift_guard.rs  agents_skills_guard.rs  bin_discover_config.rs  brackets_carriage_return.rs  cli_alias_bomb.rs  cli_anchors_rule.rs  cli_block_scalar_chomping_rule.rs  cli_braces_rule.rs  cli_brackets_rule.rs  cli_check_subcommand.rs  cli_colons_rule.rs  cli_commas_rule.rs  cli_comments_indentation_rule.rs  cli_comments_rule.rs  cli_completions.rs  cli_config_data_error.rs  cli_config_flags.rs  cli_config_migrate.rs  cli_cr_line_breaks.rs  cli_diff.rs  cli_directives.rs  cli_document_end_rule.rs  cli_document_start_rule.rs  cli_empty_lines_rule.rs  cli_empty_path_parent_none.rs  cli_empty_values_rule.rs  cli_env_config.rs  cli_exit_and_errors.rs  cli_file_encoding.rs  cli_fix.rs  cli_fix_encoding.rs  cli_fix_ignore_new_lines.rs  cli_fix_symlink.rs  cli_float_values_rule.rs  cli_format_options.rs  cli_hyphens_rule.rs  cli_indentation_rule.rs  cli_invalid_inline_config.rs  cli_invalid_project_config.rs  cli_key_duplicates_rule.rs  (+165 more)
tests/common/: cli.rs  compat.rs  fake_env.rs  mod.rs
tests/fixtures/: gitlab-code-quality.schema.json  schemastore-yamllint.json
tests/fixtures/schemastore/: ryl-invalid.toml  ryl-valid.toml
tests/property_check/: harness.rs  strategy.rs
tests/property_config/: strategy.rs
tests/property_markdown_fix/: wrap.rs
tests/property_safe_fix/: ast.rs  config.rs  strategy.rs
tests/proptest-regressions/: property_check.txt  property_diff.txt  property_safe_fix.txt
