[package]
name = "ryl"
version = "0.16.0"
edition = "2024"
description = "Fast YAML linter inspired by yamllint"
readme = "README.md"
license = "MIT"
repository = "https://github.com/owenlamont/ryl"
categories = ["command-line-utilities", "development-tools"]
keywords = ["yaml", "lint", "cli", "rust"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/clippy.toml",
  # pyproject.toml is required in the maturin-built PyPI sdist so pip can
  # discover the PEP 517 build backend when installing from source.
  "/pyproject.toml",
  "/rust-toolchain.toml",
  "/rustfmt.toml",
  "/ryl.toml.schema.json",
  "/ryl.yaml.schema.json",
  "/src/**",
  "/tests/**",
]

[[bin]]
name = "ryl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }
clap_complete = "4.6"
globset = "0.4.18"
ignore = "0.4.25"
rayon = "1.11.0"
schemars = { version = "1.2.1", features = ["derive"] }
granit-parser = "0.0.5"
hashlink = "0.11.0"
ordered-float = "5"
dirs-next = "2.0.0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = { version = "3.1.1", default-features = false, features = ["text"] }
unicode-normalization = "0.1"
encoding_rs = "0.8"
toml = "1.1.2"
pulldown-cmark = { version = "0.13.4", default-features = false }
quick-xml = { version = "0.40", default-features = false }
sha2 = "0.11"
same-file = "1.0.6"

[dev-dependencies]
# Independent unified-diff applier for the `--diff` round-trip property test: a
# different implementation than the `similar` crate that produces the diff, so the
# round-trip validates the output is standard-compliant (what hk relies on).
diffy = { version = "0.5.0", default-features = false }
jsonschema = "0.46.2"
proptest = "1.11.0"
semver = "1"
tempfile = "3"
